Fixed underline spacing

--- a/packages/lesswrong/styles/_underlines.scss
+++ b/packages/lesswrong/styles/_underlines.scss
@@ -17,7 +17,7 @@
     background-image: linear-gradient(to right, $color-text 75%, transparent 75%);
     background-size: 4px 1px;
     background-repeat: repeat-x;
-    background-position:  0% 91%;
+    background-position:  0% 74%;
 }
 
 @mixin text-selection($selection) {
